showing line numbers, disabling perfect scrollbar and bug corrected on embed modal in order to refresh the embed preview

--- a/static/css/embed.main.css
+++ b/static/css/embed.main.css
@@ -70,12 +70,25 @@ body {
   font-size: 12px;
 
 }
+
+.sibling-info .sibling-progress {
+  color: #a0a0a0;
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 48px;
+  margin: 0 12px;
+}
+
 .sibling-info:hover .sibling-title{
   color: #888;
 }
-.sibling-info .sibling-icon{
+
+.sibling-info .sibling-icon, .sibling-info .sibling-icon.fa{
   font-size: 24px;
+  line-height: 48px;
+  height: auto;
 }
+
 .sibling-info.sibling-left:hover .sibling-icon {
   margin-left: 0px;
 }
@@ -98,10 +111,17 @@ body {
  */
 .view-content{
   height: 100%;
-  overflow:hidden;
+  overflow:scroll;
   position:relative;
   border-bottom: 1px solid #eee;
+  border-top: 1px solid #eee;
 }
+
+.view-index{
+  color: #a0a0a0;
+  size: 14px;
+}
+
 .view-title{
   padding: 12px 6px 0px 6px;
   font-weight: normal;
@@ -173,7 +193,11 @@ body {
   z-index:2;
 }
 
-
+/* fullscereen */
+:-webkit-full-screen:not(:root) {
+  width: 100%;
+  height: 100%;
+}
 
 
 .ps-container .ps-scrollbar-x-rail {
